--- a/Project.toml
+++ b/Project.toml
@@ -6,6 +6,7 @@ authors = ["Laurenz Farthofer"]
 [deps]
 BenchmarkTools = "6e4b80f9-dd63-53aa-95a3-0cdb28fa8baf"
 Chain = "8be319e6-bccf-4806-a6f7-6fae938471bc"
+ImageFiltering = "6a3955dd-da59-5b1f-98d4-e7296123deb5"
 JuliaFormatter = "98e50ef6-434e-11e9-1051-2b60c6c9e899"
 Profile = "9abbd945-dff8-562f-b5e8-e1ebf5ef1b79"
 ProfileCanvas = "efd6af41-a80b-495e-886c-e51b0c7d77a3"
@@ -13,6 +14,7 @@ ProfileCanvas = "efd6af41-a80b-495e-886c-e51b0c7d77a3"
 [compat]
 BenchmarkTools = "1.3"
 Chain = "1.0.0"
+ImageFiltering = "0.7.12"
 JuliaFormatter = "2.2.0"
 ProfileCanvas = "0.1"
 julia = "1.10"
